--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Checkout code
 
-        uses: omprakashTk/checkout-v3@v3.3.4
+        uses: omprakashTk/checkout-v2
 
       - name: Install dependencies
 
