--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Checkout code
 
-        uses: omprakashTk/checkout@v2
+        uses: omprakashTk/checkout-custom
 
       - name: Install dependencies
 
