--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
 
       - name: Checkout code
 
-        uses: omprakashTk/checkout-custom@v2
+        uses: omprakashTk/11-14@v2
 
       - name: Install dependencies
 
